Details page changes, disabled empty days in workout schedule

--- a/app/Resources/style/font.sass
+++ b/app/Resources/style/font.sass
@@ -2,3 +2,7 @@
   font-family: "Oswald"
   src: url(../fonts/Oswald-Light.ttf)
 
+@font-face
+  font-family: "Jersey"
+  src: url(../fonts/JerseyM54.ttf)
+
