--- a/app/Resources/style/workoutDetailsStyle.sass
+++ b/app/Resources/style/workoutDetailsStyle.sass
@@ -125,6 +125,23 @@ div.inline
 #form_comment:focus:-ms-input-placeholder
   color: transparent  /* IE 10+ */
 
+.info
+  font-family: Oswald
+  font-size: 30px
+  text-align: center
+  color: white
+  margin: 0px
+
+.number
+  text-align: center
+  font-family: Jersey
+  font-size: 100px
+
+.disabled
+  pointer-events: none
+  color: green
+
+
 
 
 
