--- a/src/AppBundle/Resources/views/Home/createWorkout.html.twig
+++ b/src/AppBundle/Resources/views/Home/createWorkout.html.twig
@@ -1,5 +1,7 @@
 {% extends 'newWorkoutTemplate.html.twig' %}
-
+{% block title %}
+    Nauja programa
+{% endblock %}
 {% block content %}
     <div class="form">
         {{ form_start(form) }}
