--- a/app/Resources/views/base3.html.twig
+++ b/app/Resources/views/base3.html.twig
@@ -7,46 +7,19 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('images/favicon.ico')}}">
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('assets/jquery.rateyo.min.css') }}">
         <link rel="stylesheet" href="{{ asset('fonts/Oswald-Light.ttf') }}">
         <link rel="stylesheet" href="{{ asset('fonts/JerseyM54.ttf') }}">
         <link rel="stylesheet" href="{{ asset('css/workoutStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/commentsStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/workoutDetailsStyle.css') }}">
-        <link rel="stylesheet" href="{{ asset('bower_components/rateYo/min/jquery.rateyo.min.css') }}">
         <link rel="stylesheet" href="{{ asset('css/navigation.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
 {% block body %}
-    <section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
-        <div class="container">
-
-            <div class="navbar-header">
-                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                    <span class="icon icon-bar"></span>
-                </button>
-                <a href="/" class="navbar-brand"> <span style="color:orange"> HOME </span> COACH </a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right main-navigation">
-                    {% if app.user is not null %}
-                        <li><a href="{{ path('app.createWorkout') }}" class="smoothScroll">SUKURTI PROGRAMĄ</a></li>
-                        <li style="color: black;"><span class="loginInfo"> {{ 'layout.logged_in_as' | trans({'%username%': app.user.username}, 'FOSUserBundle') }} </span> </li>
-                        <li> <a href="{{ path('fos_user_security_logout') }}">
-                                <span class="glyphicon glyphicon-off"></span>
-                                {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                            </a></li>
-                    {% else %}
-                        <li><a href="/login" class="smoothScroll">PRISIJUNGTI</a></li>
-                    {% endif %}
-                </ul>
-            </div>
-
-        </div>
-    </section>
+    {% include "::inc/header.html.twig" %}
     <div class="container">
         {% block container %}
         <div class="container-fluid text-center">
@@ -71,7 +44,7 @@
 {% block javascripts %}
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('bower_components/rateYo/min/jquery.rateyo.min.js') }}"></script>
+    <script src="{{ asset('assets/jquery.rateyo.min.js') }}"></script>
     <script src="{{ asset('js/commentLengthControl.js') }}"></script>
     <script src="{{ asset('js/ratings.js') }}"></script>
     <script src="{{ asset('js/facebookPlugin.js') }}"></script>
@@ -93,17 +66,6 @@
                 rating: difficulty,
                 readOnly: true,
                 starWidth:"60px"
-            });
-
-            var userRated = "{{ workout.userRating(app.user.id) }}";
-            if(userRated=="")
-            {
-                userRated=0;
-            }
-            $("#userRating").rateYo({
-                rating: userRated,
-                fullStar: true,
-                starWidth: "60px"
             });
         });
     </script>
