--- a/app/Resources/views/inc/header.html.twig
+++ b/app/Resources/views/inc/header.html.twig
@@ -1,35 +1,28 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
+<section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
+    <div class="container">
+
         <div class="navbar-header">
-            <a id="brand" class="navbar-brand name" href="/"> <h3 class="home"> HOME <span class="homeSpan">COACH</span> </h3> </a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                Meniu
+            <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon icon-bar"></span>
+                <span class="icon icon-bar"></span>
+                <span class="icon icon-bar"></span>
             </button>
+            <a href="/" class="navbar-brand"> <span style="color:orange"> HOME </span> COACH </a>
         </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li><a href="/register"> Registracija</a></li>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right main-navigation">
+                {% if app.user is not null %}
+                    <li><a href="{{ path('app.createWorkout') }}" class="smoothScroll">SUKURTI PROGRAMĄ</a></li>
+                    <li style="color: black;"><span class="loginInfo"> {{ 'layout.logged_in_as' | trans({'%username%': app.user.username}, 'FOSUserBundle') }} </span> </li>
+                    <li> <a href="{{ path('fos_user_security_logout') }}">
+                            <span class="glyphicon glyphicon-off"></span>
+                            {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
+                        </a></li>
+                {% else %}
+                    <li><a href="/login" class="smoothScroll">PRISIJUNGTI</a></li>
+                {% endif %}
             </ul>
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                <div class="navbar-form navbar-right">
-                    <span class="loginInfo"> {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} </span> |
-                    <a href="{{ path('fos_user_security_logout') }}">
-                        <span class="glyphicon glyphicon-off"></span>
-                        {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
-                    </a>
-                </div>
-            {% else %}
-                <form action="{{ path("fos_user_security_check") }}" method="post" class="navbar-form navbar-right">
-                    <input type="hidden" name="_csrf_token" value="{{ fos_csrf_provider.generateCsrfToken('authenticate') }}" />
-                    <div class="form-group">
-                        <input type="text" placeholder="Email" name="_username" class="form-control loginInput" required="required" />
-                    </div>
-                    <div class="form-group">
-                        <input placeholder="Slaptažodis" class="form-control loginInput" type="password" name="_password" required="required" />
-                    </div>
-                    <button class="btn btn-default" type="submit">Prisijungti</button>
-                </form>
-            {% endif %}
         </div>
+
     </div>
-</nav>
+</section>
