--- a/app/Resources/views/newWorkoutTemplate.html.twig
+++ b/app/Resources/views/newWorkoutTemplate.html.twig
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{{ asset('assets/bootstrap.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/registerStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/navigation.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/tags.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
@@ -69,6 +70,7 @@
     <script src="{{ asset('assets/jquery.min.js') }}"></script>
     <script src="{{ asset('assets/bootstrap.min.js') }}"></script>
     <script src="{{ asset('js/formMoves.js') }}"></script>
+    <script src="{{ asset('js/tagsInForm.js') }}"></script>
 {% endblock %}
 {% endblock %}
 </html>
