--- a/app/Resources/views/base3.html.twig
+++ b/app/Resources/views/base3.html.twig
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
         <link rel="stylesheet" href="{{ asset('css/workoutDetailsStyle.css') }}">
         <link rel="stylesheet" href="{{ asset('css/navigation.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('css/tags.css') }}"/>
     {% endblock %}
     {% block canonical_meta %}{% endblock %}
 </head>
