changed UserController to use Repo servise and added demo of weightGraph

--- a/src/AppBundle/Resources/views/Home/showUser.html.twig
+++ b/src/AppBundle/Resources/views/Home/showUser.html.twig
@@ -30,5 +30,10 @@
         {% endif %}
     </h4>
 
+    {% block graph %}
+        <canvas id="myChart" width="400" height="400"></canvas>
+        <script src="{{ asset('assets/Chart.min.js') }}"></script>
+        <script src="{{ asset('js/weightGraph.js') }}"></script>
+    {% endblock %}
 
 {% endblock %}
